Revert "Claude/looma landing page 011 cv1w zdq a rr95em dultmyr"

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     <!-- JAVASCRIPT -->
     <script>
         // ==========================================
-        // MOBILE APP MOCKUP ANIMATION
+        // CANVAS PARTICLE ANIMATION
         // ==========================================
 
         (function() {
@@ -486,36 +486,70 @@
             if (!canvas) return;
 
             const ctx = canvas.getContext('2d');
+            let particles = [];
             let animationFrameId = null;
-            let currentSlide = 0;
-            let slideProgress = 0;
-            const slideSpeed = 0.008;
 
-            // Kıyafet kategorileri
-            const outfitCategories = [
-                { name: 'UST', items: ['GOMLEK', 'TSHIRT', 'SWEATSHIRT'] },
-                { name: 'ALT', items: ['JEAN', 'PANTOLON', 'SORT'] },
-                { name: 'AYAKKABI', items: ['SNEAKER', 'BOT', 'AYAKKABI'] },
-                { name: 'AKSESUAR', items: ['SAAT', 'GOZLUK', 'SAPKA'] }
-            ];
-
-            let canvasWidth = 0;
-            let canvasHeight = 0;
-            let phoneWidth = 0;
-            let phoneHeight = 0;
-            let phoneX = 0;
-            let phoneY = 0;
-
-            // 3D tilt için mouse tracking
+            // Mouse state
             const mouse = {
                 x: 0,
                 y: 0,
+                radius: 120,
+                strength: 0.4,
                 active: false
             };
 
-            let tiltX = 0;
-            let tiltY = 0;
-            const tiltSmoothing = 0.1;
+            // Particle sınıfı
+            class Particle {
+                constructor(x, y) {
+                    this.ox = x; // Original x
+                    this.oy = y; // Original y
+                    this.x = x;
+                    this.y = y;
+                    this.vx = 0;
+                    this.vy = 0;
+                    this.size = 2; // Square pixel
+                    this.alpha = 0.7 + Math.random() * 0.3; // 0.7 - 1.0
+                }
+
+                update() {
+                    // Spring force - orijinal konuma çekme
+                    const springForce = 0.018;
+                    this.vx += (this.ox - this.x) * springForce;
+                    this.vy += (this.oy - this.y) * springForce;
+
+                    // Mouse etkileşimi
+                    if (mouse.active) {
+                        const dx = this.x - mouse.x;
+                        const dy = this.y - mouse.y;
+                        const distSq = dx * dx + dy * dy;
+                        const radiusSq = mouse.radius * mouse.radius;
+
+                        if (distSq < radiusSq && distSq > 0) {
+                            const dist = Math.sqrt(distSq);
+                            const force = (1 - dist / mouse.radius) * mouse.strength;
+                            const nx = dx / dist;
+                            const ny = dy / dist;
+
+                            this.vx += nx * force * 4;
+                            this.vy += ny * force * 4;
+                        }
+                    }
+
+                    // Sürtünme
+                    this.vx *= 0.9;
+                    this.vy *= 0.9;
+
+                    // Pozisyon güncelleme
+                    this.x += this.vx;
+                    this.y += this.vy;
+                }
+
+                draw() {
+                    // Pixel style - square particles
+                    ctx.fillStyle = `rgba(229, 231, 235, ${this.alpha})`;
+                    ctx.fillRect(this.x - this.size/2, this.y - this.size/2, this.size, this.size);
+                }
+            }
 
             // Canvas boyutunu ayarlama
             function resizeCanvas() {
@@ -527,227 +561,41 @@
 
                 ctx.scale(dpr, dpr);
 
-                canvasWidth = rect.width;
-                canvasHeight = rect.height;
-
-                // Telefon boyutları (canvas'ın %60'ı)
-                phoneHeight = canvasHeight * 0.7;
-                phoneWidth = phoneHeight * 0.5; // 9:18 aspect ratio
-                phoneX = (canvasWidth - phoneWidth) / 2;
-                phoneY = (canvasHeight - phoneHeight) / 2;
+                // Particle grid'ini oluştur
+                createParticles(rect.width, rect.height);
             }
 
-            // 3D gölge çiz
-            function drawShadow(offsetX, offsetY, blur) {
-                ctx.save();
-                ctx.shadowColor = 'rgba(0, 0, 0, 0.3)';
-                ctx.shadowBlur = blur;
-                ctx.shadowOffsetX = offsetX;
-                ctx.shadowOffsetY = offsetY;
-            }
+            // Particle grid oluşturma
+            function createParticles(width, height) {
+                particles = [];
+                const spacing = 20;
+                const margin = 25;
 
-            // Mobil telefon çerçevesi çiz
-            function drawPhone() {
-                ctx.save();
+                const cols = Math.floor((width - margin * 2) / spacing);
+                const rows = Math.floor((height - margin * 2) / spacing);
 
-                // 3D transform uygula
-                const centerX = phoneX + phoneWidth / 2;
-                const centerY = phoneY + phoneHeight / 2;
+                const offsetX = (width - (cols - 1) * spacing) / 2;
+                const offsetY = (height - (rows - 1) * spacing) / 2;
 
-                ctx.translate(centerX, centerY);
-
-                // Perspective scale
-                const scale = 1 + (tiltY * 0.02);
-                ctx.scale(scale, scale);
-
-                // Rotation
-                ctx.rotate(tiltX * 0.02);
-
-                ctx.translate(-centerX, -centerY);
-
-                const cornerRadius = 8;
-                const borderWidth = 3;
-
-                // Gölge ekle
-                drawShadow(tiltX * 5, tiltY * 5 + 10, 20);
-
-                // Telefon gövdesi
-                ctx.fillStyle = '#0F1117';
-                ctx.strokeStyle = '#E5E7EB';
-                ctx.lineWidth = borderWidth;
-
-                // Rounded rectangle için path
-                ctx.beginPath();
-                ctx.moveTo(phoneX + cornerRadius, phoneY);
-                ctx.lineTo(phoneX + phoneWidth - cornerRadius, phoneY);
-                ctx.arcTo(phoneX + phoneWidth, phoneY, phoneX + phoneWidth, phoneY + cornerRadius, cornerRadius);
-                ctx.lineTo(phoneX + phoneWidth, phoneY + phoneHeight - cornerRadius);
-                ctx.arcTo(phoneX + phoneWidth, phoneY + phoneHeight, phoneX + phoneWidth - cornerRadius, phoneY + phoneHeight, cornerRadius);
-                ctx.lineTo(phoneX + cornerRadius, phoneY + phoneHeight);
-                ctx.arcTo(phoneX, phoneY + phoneHeight, phoneX, phoneY + phoneHeight - cornerRadius, cornerRadius);
-                ctx.lineTo(phoneX, phoneY + cornerRadius);
-                ctx.arcTo(phoneX, phoneY, phoneX + cornerRadius, phoneY, cornerRadius);
-                ctx.closePath();
-                ctx.fill();
-                ctx.stroke();
-
-                ctx.shadowColor = 'transparent';
-                ctx.shadowBlur = 0;
-                ctx.shadowOffsetX = 0;
-                ctx.shadowOffsetY = 0;
-
-                // Notch (üst çentik)
-                const notchWidth = phoneWidth * 0.3;
-                const notchHeight = 6;
-                const notchX = phoneX + (phoneWidth - notchWidth) / 2;
-                const notchY = phoneY + 8;
-
-                ctx.fillStyle = '#05060A';
-                ctx.fillRect(notchX, notchY, notchWidth, notchHeight);
-
-                // Home indicator (alt çizgi)
-                const indicatorWidth = phoneWidth * 0.35;
-                const indicatorHeight = 4;
-                const indicatorX = phoneX + (phoneWidth - indicatorWidth) / 2;
-                const indicatorY = phoneY + phoneHeight - 12;
-
-                ctx.fillStyle = '#4B5563';
-                ctx.fillRect(indicatorX, indicatorY, indicatorWidth, indicatorHeight);
-
-                ctx.restore();
-            }
-
-            // Kıyafet kartı çiz
-            function drawOutfitCard(category, offsetX, depth = 0) {
-                ctx.save();
-
-                // 3D transform uygula (telefon ile aynı)
-                const centerX = phoneX + phoneWidth / 2;
-                const centerY = phoneY + phoneHeight / 2;
-
-                ctx.translate(centerX, centerY);
-                const scale = 1 + (tiltY * 0.02);
-                ctx.scale(scale, scale);
-                ctx.rotate(tiltX * 0.02);
-                ctx.translate(-centerX, -centerY);
-
-                const cardPadding = 20;
-                const cardX = phoneX + cardPadding + offsetX;
-                const cardY = phoneY + 40;
-                const cardWidth = phoneWidth - (cardPadding * 2);
-                const cardHeight = phoneHeight - 80;
-
-                // 3D depth efekti (parallax)
-                const depthOffset = depth * tiltX * 0.5;
-
-                // Kart arka planı - hafif gölge ile depth hissi
-                ctx.fillStyle = `rgba(255, 255, 255, ${0.05 + depth * 0.02})`;
-                ctx.strokeStyle = `rgba(229, 231, 235, ${0.2 + depth * 0.1})`;
-                ctx.lineWidth = 2;
-                ctx.fillRect(cardX + depthOffset, cardY, cardWidth, cardHeight);
-                ctx.strokeRect(cardX + depthOffset, cardY, cardWidth, cardHeight);
-
-                // Kategori başlığı
-                ctx.fillStyle = '#E5E7EB';
-                ctx.font = 'bold 16px "Pixelify Sans", monospace';
-                ctx.textAlign = 'center';
-                ctx.fillText(category.name, cardX + depthOffset + cardWidth / 2, cardY + 40);
-
-                // Kıyafet siluetleri (3 adet)
-                const itemHeight = (cardHeight - 120) / 3;
-                category.items.forEach((item, index) => {
-                    const itemY = cardY + 70 + (index * itemHeight);
-                    const itemX = cardX + depthOffset + cardWidth / 2;
-
-                    // Kıyafet kutusu
-                    const boxSize = Math.min(cardWidth * 0.6, itemHeight * 0.6);
-                    ctx.fillStyle = 'rgba(229, 231, 235, 0.1)';
-                    ctx.fillRect(itemX - boxSize/2, itemY, boxSize, boxSize);
-
-                    // Kıyafet ikonu (basit şekil)
-                    ctx.fillStyle = '#9CA3AF';
-
-                    if (category.name === 'UST') {
-                        // T-shirt şekli
-                        ctx.fillRect(itemX - boxSize*0.3, itemY + boxSize*0.2, boxSize*0.6, boxSize*0.5);
-                        ctx.fillRect(itemX - boxSize*0.4, itemY + boxSize*0.15, boxSize*0.2, boxSize*0.3);
-                        ctx.fillRect(itemX + boxSize*0.2, itemY + boxSize*0.15, boxSize*0.2, boxSize*0.3);
-                    } else if (category.name === 'ALT') {
-                        // Pantolon şekli
-                        ctx.fillRect(itemX - boxSize*0.3, itemY + boxSize*0.2, boxSize*0.25, boxSize*0.6);
-                        ctx.fillRect(itemX + boxSize*0.05, itemY + boxSize*0.2, boxSize*0.25, boxSize*0.6);
-                    } else if (category.name === 'AYAKKABI') {
-                        // Ayakkabı şekli
-                        ctx.fillRect(itemX - boxSize*0.3, itemY + boxSize*0.5, boxSize*0.6, boxSize*0.25);
-                        ctx.fillRect(itemX - boxSize*0.2, itemY + boxSize*0.35, boxSize*0.4, boxSize*0.2);
-                    } else if (category.name === 'AKSESUAR') {
-                        // Aksesuar (daire)
-                        ctx.beginPath();
-                        ctx.arc(itemX, itemY + boxSize*0.5, boxSize*0.25, 0, Math.PI * 2);
-                        ctx.fill();
+                for (let i = 0; i < cols; i++) {
+                    for (let j = 0; j < rows; j++) {
+                        const x = offsetX + i * spacing;
+                        const y = offsetY + j * spacing;
+                        particles.push(new Particle(x, y));
                     }
-
-                    // İsim
-                    ctx.fillStyle = '#B8BBC3';
-                    ctx.font = '12px "Pixelify Sans", monospace';
-                    ctx.fillText(item, itemX, itemY + boxSize + 20);
-                });
-
-                ctx.restore();
+                }
             }
 
-            // Ana animasyon döngüsü
+            // Animasyon döngüsü
             function animate() {
-                // Mouse pozisyonuna göre tilt hesapla
-                if (mouse.active) {
-                    const targetTiltX = ((mouse.x / canvasWidth) - 0.5) * 20;
-                    const targetTiltY = ((mouse.y / canvasHeight) - 0.5) * 20;
+                // Motion blur için hafif şeffaf dolgu
+                ctx.fillStyle = 'rgba(5, 6, 10, 0.15)';
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-                    tiltX += (targetTiltX - tiltX) * tiltSmoothing;
-                    tiltY += (targetTiltY - tiltY) * tiltSmoothing;
-                } else {
-                    // Mouse yoksa merkeze dön
-                    tiltX += (0 - tiltX) * tiltSmoothing;
-                    tiltY += (0 - tiltY) * tiltSmoothing;
-                }
-
-                // Arka plan temizle
-                ctx.fillStyle = '#05060A';
-                ctx.fillRect(0, 0, canvasWidth, canvasHeight);
-
-                // Telefonu çiz
-                drawPhone();
-
-                // Mevcut ve sonraki slide
-                const nextSlide = (currentSlide + 1) % outfitCategories.length;
-
-                // Slide geçişi (sağdan sola kayma)
-                const currentOffsetX = -slideProgress * phoneWidth;
-                const nextOffsetX = phoneWidth - (slideProgress * phoneWidth);
-
-                // Mevcut kartı çiz (depth = 0.5)
-                drawOutfitCard(outfitCategories[currentSlide], currentOffsetX, 0.5);
-
-                // Sonraki kartı çiz (depth = 0.3)
-                drawOutfitCard(outfitCategories[nextSlide], nextOffsetX, 0.3);
-
-                // Slide ilerletme
-                slideProgress += slideSpeed;
-                if (slideProgress >= 1) {
-                    slideProgress = 0;
-                    currentSlide = nextSlide;
-                }
-
-                // Progress indicator (alttta noktalar)
-                const dotSize = 6;
-                const dotSpacing = 16;
-                const totalWidth = (outfitCategories.length * dotSpacing) - dotSpacing;
-                const startX = phoneX + (phoneWidth - totalWidth) / 2;
-                const dotY = phoneY + phoneHeight + 20;
-
-                outfitCategories.forEach((_, index) => {
-                    ctx.fillStyle = index === currentSlide ? '#E5E7EB' : 'rgba(229, 231, 235, 0.3)';
-                    ctx.fillRect(startX + (index * dotSpacing), dotY, dotSize, dotSize);
+                // Her particle'ı güncelle ve çiz
+                particles.forEach(particle => {
+                    particle.update();
+                    particle.draw();
                 });
 
                 animationFrameId = requestAnimationFrame(animate);
@@ -768,7 +616,7 @@
                 mouse.y = e.clientY - rect.top;
             });
 
-            // Touch support
+            // Touch event listeners (mobile)
             canvas.addEventListener('touchstart', (e) => {
                 e.preventDefault();
                 mouse.active = true;
